# avogadro-build-ase

./: README.md  mx2.py  plugin.json  pyproject.toml  ribbon.py
src/avogadro_ase/: __init__.py  mx2.py  nanotube-options.json  nanotube.py  ribbon.py  slab-options.json  slab.py
src/avogadro_build_ase/: __init__.py  mx2-options.json  ribbon-options.json
