[project]
name = "avogadro-build-ase"
version = "0.1.0"
description = "Generate materials structures for Avogadro 2 using ASE"
authors = [{name = "Geoff Hutchison", email = "geoff.hutchison@gmail.com"}]
license = "BSD-3-Clause"
dependencies = ["ase>=3.27.0,<4", "spglib>=2.0,<3"]
requires-python = ">= 3.11"

[project.scripts]
avogadro-build-ase = "avogadro_build_ase:main"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.2,<0.11.0"]

[tool.avogadro]
minimum-avogadro-version = "1.103"

[[tool.avogadro.menu-commands]]
identifier = "mx2"
menu = "Build"
submenu = "Insert"
item = "Metal Dichalcogenide..."
user-options = "src/avogadro_build_ase/mx2-options.json"

[[tool.avogadro.menu-commands]]
identifier = "ribbon"
menu = "Build"
submenu = "Insert"
item = "Nanoribbon..."
user-options = "src/avogadro_build_ase/ribbon-options.json"

[[tool.avogadro.menu-commands]]
identifier = "nanotube"
menu = "Build"
submenu = "Insert"
item = "Nanotube..."
user-options = "src/avogadro_build_ase/nanotube-options.json"

[[tool.avogadro.menu-commands]]
identifier = "slab"
input-format = "cjson"
menu = "Build"
submenu = "Insert"
item = "Surface Slab..."
user-options = "src/avogadro_build_ase/slab-options.json"


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
avogadro-build-ase = { path = ".", editable = true }

[tool.pixi.tasks]
